@startuml


' skinparam linetype ortho

title Mentory ER (Core MVP, Must Have)

entity "users" as users {
  * id : uuid <<PK>>
  --
  email : text <<UQ>>
  password_hash : text
  full_name : text
  role : text
  status : text
  created_at : timestamptz
}

entity "mentor_profiles" as mentor_profiles {
  * user_id : uuid <<PK, FK>>
  --
  headline : text
  bio : text
  is_active : bool
  rating_avg : numeric
  rating_count : int
}

entity "mentee_profiles" as mentee_profiles {
  * user_id : uuid <<PK, FK>>
  --
  background : text
  goals : text[]
}

entity "topics" as topics {
  * id : uuid <<PK>>
  --
  name : text <<UQ>>
}

entity "mentor_topics" as mentor_topics {
  * mentor_id : uuid <<PK, FK>>
  * topic_id : uuid <<PK, FK>>
}

entity "mentor_services" as mentor_services {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  title : text
  duration_min : int
  price_amount : numeric
  currency : text
  is_active : bool
}

entity "slots" as slots {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  start_at : timestamptz
  end_at : timestamptz
  status : text
}

entity "sessions" as sessions {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  mentee_id : uuid <<FK>>
  service_id : uuid <<FK>>
  slot_id : uuid <<FK>>
  status : text
  start_at : timestamptz
  end_at : timestamptz
  created_at : timestamptz
  canceled_at : timestamptz
  cancel_reason : text
}

entity "video_rooms" as video_rooms {
  * id : uuid <<PK>>
  --
  session_id : uuid <<FK>>
  meeting_url : text
}

entity "conversations" as conversations {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  mentee_id : uuid <<FK>>
  session_id : uuid <<FK>>
  created_at : timestamptz
}

entity "messages" as messages {
  * id : uuid <<PK>>
  --
  conversation_id : uuid <<FK>>
  sender_id : uuid <<FK>>
  content : text
  created_at : timestamptz
  read_at : timestamptz
}

entity "reviews" as reviews {
  * id : uuid <<PK>>
  --
  session_id : uuid <<FK>>
  mentee_id : uuid <<FK>>
  mentor_id : uuid <<FK>>
  rating : int
  text : text
  created_at : timestamptz
}

entity "payments" as payments {
  * id : uuid <<PK>>
  --
  session_id : uuid <<FK>>
  amount_cents : int
  currency : text
  status : text
  provider_payment_id : text
  created_at : timestamptz
}

entity "payouts" as payouts {
  * id : uuid <<PK>>
  --
  mentor_id : uuid <<FK>>
  amount_cents : int
  currency : text
  status : text
  created_at : timestamptz
}

entity "notifications" as notifications {
  * id : uuid <<PK>>
  --
  user_id : uuid <<FK>>
  type : text
  created_at : timestamptz
  read_at : timestamptz
}

' Layout anchors
users -[hidden]down- mentor_profiles
mentor_profiles -[hidden]down- mentor_services
mentor_services -[hidden]down- slots
slots -[hidden]down- sessions
sessions -[hidden]down- conversations
conversations -[hidden]down- reviews
reviews -[hidden]down- payments
payments -[hidden]down- payouts
payouts -[hidden]down- notifications

' Relationships
users ||--o| mentor_profiles : has
users ||--o| mentee_profiles : has

mentor_profiles ||--o{ mentor_topics : tags
topics ||--o{ mentor_topics : catalog

users ||--o{ mentor_services : offers
users ||--o{ slots : owns
mentor_services ||--o{ sessions : service
slots ||--o| sessions : slot
users ||--o{ sessions : mentor
users ||--o{ sessions : mentee

sessions ||--o| video_rooms : video
sessions ||--o| conversations : chat
conversations ||--o{ messages : messages
users ||--o{ messages : sends

sessions ||--o| reviews : review
users ||--o{ reviews : writes
users ||--o{ reviews : receives

sessions ||--o| payments : payment
users ||--o{ payouts : receives
users ||--o{ notifications : gets

@enduml
